--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,10 @@ dependencies = [
     "pydocstyle (>=6.3.0,<7.0.0)",
     "mkdocs (>=1.6.1,<2.0.0)",
     "taskipy (>=1.14.1,<2.0.0)",
-    "pydantic[email] (>=2.10.5,<3.0.0)"
+    "pydantic[email] (>=2.10.5,<3.0.0)",
+    "pytest (>=8.3.4,<9.0.0)",
+    "selenium (>=4.27.1,<5.0.0)",
+    "streamlit-authenticator (>=0.4.1,<0.5.0)"
 ]
 
 
