--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,16 @@
 [tool.poetry]
-name = "curso-streamlit-dataquality"
+name = "DataQuality"
 version = "0.1.0"
 description = ""
 authors = ["LucianoBorba <luhborbafilho@gmail.com>"]
 readme = "README.md"
+package-mode = false
+packages = [
+    { include = "app" }
+]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.10,<3.14"
 streamlit = "^1.32.2"
 black = "^24.3.0"
 isort = "^5.13.2"
